"Flappy Birds" now works! (Sort-of)

--- a/Charles Truluck/Base.lproj/LaunchScreen.xib
+++ b/Charles Truluck/Base.lproj/LaunchScreen.xib
@@ -10,17 +10,22 @@
             <rect key="frame" x="6" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This will change!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KgH-L9-ysw">
-                    <rect key="frame" x="177" y="229" width="127" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="tu0-1Z-dsV">
+                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="tu0-1Z-dsV" secondAttribute="centerX" id="9bV-bP-Niv"/>
+                <constraint firstItem="tu0-1Z-dsV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-50" id="uNb-XO-G1j"/>
+                <constraint firstAttribute="bottom" secondItem="tu0-1Z-dsV" secondAttribute="bottom" constant="-50" id="z4r-ni-ZfI"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="background" width="1080" height="1080"/>
+    </resources>
 </document>
