Flappy bird renamed to "tower bird". Tower bird almost finished- needs backgrounds

--- a/Charles Truluck/Base.lproj/Main.storyboard
+++ b/Charles Truluck/Base.lproj/Main.storyboard
@@ -17,15 +17,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="i9X-hX-8kr">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="i9X-hX-8kr">
+                                <rect key="frame" x="-240" y="-50" width="1080" height="700"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="WWDC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZTb-uz-g6b">
-                                <rect key="frame" x="247" y="579" width="71" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WWDC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZTb-uz-g6b">
+                                <rect key="frame" x="254" y="579" width="71" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Kb-ab-5tX">
+                                <rect key="frame" x="462" y="528" width="122" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="IUE-aJ-ahM"/>
+                                    <constraint firstAttribute="width" constant="122" id="Wga-zI-Y37"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
+                                <state key="normal" title="Projects">
+                                    <color key="titleColor" red="0.93725490196078431" green="0.37647058823529411" blue="0.050980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="ProjectsAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="SYt-U8-3ug"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SK0-6V-fLE">
                                 <rect key="frame" x="16" y="528" width="122" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.9872672181020975" blue="0.99049184785837119" alpha="0.0" colorSpace="calibratedRGB"/>
@@ -59,12 +75,6 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9b-jZ-dBf">
-                                <rect key="frame" x="318" y="579" width="20" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u6A-ka-eYm">
                                 <rect key="frame" x="239" y="455" width="122" height="30"/>
                                 <constraints>
@@ -80,22 +90,16 @@
                                     <segue destination="5qv-Bj-AoG" kind="show" id="vpr-Eg-hBN"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Kb-ab-5tX">
-                                <rect key="frame" x="462" y="528" width="122" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9b-jZ-dBf">
+                                <rect key="frame" x="325" y="579" width="20" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="IUE-aJ-ahM"/>
-                                    <constraint firstAttribute="width" constant="122" id="Wga-zI-Y37"/>
+                                    <constraint firstAttribute="width" constant="20" id="1pF-th-7pH"/>
+                                    <constraint firstAttribute="height" constant="21" id="vML-El-fzG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="23"/>
-                                <state key="normal" title="Projects">
-                                    <color key="titleColor" red="0.93725490196078431" green="0.37647058823529411" blue="0.050980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="ProjectsAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="SYt-U8-3ug"/>
-                                </connections>
-                            </button>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -114,8 +118,8 @@
                             <constraint firstAttribute="centerY" secondItem="a0o-uk-gPv" secondAttribute="centerY" id="Y4P-ha-toR"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="7Kb-ab-5tX" secondAttribute="bottom" constant="42" id="dFi-H0-r2T"/>
                             <constraint firstAttribute="centerX" secondItem="a0o-uk-gPv" secondAttribute="centerX" id="fST-Vl-9Ox"/>
-                            <constraint firstItem="a9b-jZ-dBf" firstAttribute="leading" secondItem="ZTb-uz-g6b" secondAttribute="trailing" id="mbp-6O-fNm"/>
                             <constraint firstItem="a9b-jZ-dBf" firstAttribute="top" secondItem="u6A-ka-eYm" secondAttribute="bottom" constant="94" id="tBc-Yd-FKm"/>
+                            <constraint firstItem="a9b-jZ-dBf" firstAttribute="leading" secondItem="ZTb-uz-g6b" secondAttribute="trailing" id="zFn-sZ-DI8"/>
                             <constraint firstItem="Ytb-G2-fCy" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="123" id="zQg-uS-lcb"/>
                         </constraints>
                     </view>
@@ -176,18 +180,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="F6m-qn-u6X">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="F6m-qn-u6X">
+                                <rect key="frame" x="-240" y="-50" width="1080" height="700"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WWDC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uMK-ja-GA1">
                                 <rect key="frame" x="254" y="579" width="71" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFw-d9-NY1">
-                                <rect key="frame" x="326" y="579" width="20" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -224,6 +222,16 @@
                                     <action selector="backAction:" destination="f3E-u4-9po" eventType="touchUpInside" id="HSw-Ny-IKg"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFw-d9-NY1">
+                                <rect key="frame" x="325" y="579" width="20" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="2kM-iv-UDH"/>
+                                    <constraint firstAttribute="height" constant="21" id="NRO-Im-llC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8FC-lc-hq7" customClass="CustomScrollView" customModule="Charles_Truluck" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="70" width="600" height="530"/>
                             </scrollView>
@@ -238,12 +246,12 @@
                             <constraint firstItem="1TJ-Te-adz" firstAttribute="top" secondItem="8FC-lc-hq7" secondAttribute="top" id="UAO-F0-MgW"/>
                             <constraint firstAttribute="centerX" secondItem="8FC-lc-hq7" secondAttribute="centerX" id="XUC-Kz-2x8"/>
                             <constraint firstItem="8FC-lc-hq7" firstAttribute="top" secondItem="NIt-d4-z7z" secondAttribute="bottom" constant="25" id="Xid-jo-xQI"/>
-                            <constraint firstItem="UPo-jW-hsf" firstAttribute="top" secondItem="DFw-d9-NY1" secondAttribute="bottom" id="aoN-k5-OXe"/>
                             <constraint firstAttribute="centerY" secondItem="F6m-qn-u6X" secondAttribute="centerY" id="f7o-ES-iMy"/>
                             <constraint firstItem="UPo-jW-hsf" firstAttribute="top" secondItem="F6m-qn-u6X" secondAttribute="bottom" constant="-50" id="fx6-JF-ImH"/>
                             <constraint firstItem="UPo-jW-hsf" firstAttribute="top" secondItem="uMK-ja-GA1" secondAttribute="bottom" id="gJQ-1T-Hh1"/>
                             <constraint firstItem="UPo-jW-hsf" firstAttribute="top" secondItem="8FC-lc-hq7" secondAttribute="bottom" id="gXM-9D-yh2"/>
-                            <constraint firstItem="DFw-d9-NY1" firstAttribute="leading" secondItem="uMK-ja-GA1" secondAttribute="trailing" constant="1" id="m7Y-kw-fQS"/>
+                            <constraint firstItem="UPo-jW-hsf" firstAttribute="top" secondItem="DFw-d9-NY1" secondAttribute="bottom" id="guS-q9-SIY"/>
+                            <constraint firstItem="DFw-d9-NY1" firstAttribute="leading" secondItem="uMK-ja-GA1" secondAttribute="trailing" id="pma-wh-NKG"/>
                             <constraint firstAttribute="centerX" secondItem="1TJ-Te-adz" secondAttribute="centerX" id="q3K-BP-eTb"/>
                             <constraint firstAttribute="centerX" secondItem="NIt-d4-z7z" secondAttribute="centerX" id="tu8-YN-aCz"/>
                             <constraint firstAttribute="centerX" secondItem="F6m-qn-u6X" secondAttribute="centerX" id="uNb-P7-V4R"/>
@@ -277,8 +285,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="xEZ-fv-WHA">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="xEZ-fv-WHA">
+                                <rect key="frame" x="-240" y="-50" width="1080" height="700"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WWDC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qja-vD-d3e">
                                 <rect key="frame" x="254" y="579" width="71" height="21"/>
@@ -383,6 +391,6 @@
         <image name="me-Icon" width="576" height="561"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="GfI-us-H2w"/>
+        <segue reference="21W-Yi-O7F"/>
     </inferredMetricsTieBreakers>
 </document>
